--- a/user_configuration.json
+++ b/user_configuration.json
@@ -114,6 +114,7 @@
         "ttf-liberation",
         "ttf-font-awesome",
         "go",
+        "qbittorrent",
         "noto-fonts-extra",
         "hyprpaper",
         "alacritty",
