--- a/user_configuration.json
+++ b/user_configuration.json
@@ -153,7 +153,7 @@
         "lib32-alsa-plugins",
         "mesa",
         "vulkan-radeon",
-        "xf86-video-admgpu",
+        "xf86-video-amdgpu",
         "xf86-video-ati",
         "mpv"
     ],
