--- a/user_configuration.json
+++ b/user_configuration.json
@@ -12,7 +12,7 @@
         "config_type": "default_layout",
         "device_modifications": [
             {
-                "device": "/dev/sdb",
+                "device": "/dev/sda",
                 "partitions": [
                     {
                         "btrfs": [],
