--- a/user_configuration.json
+++ b/user_configuration.json
@@ -109,6 +109,7 @@
     "packages": [
         "hyprland",
         "firefox",
+        "chromium",
         "git",
         "ttf-dejavu",
         "ttf-liberation",
