--- a/user_configuration.json
+++ b/user_configuration.json
@@ -135,6 +135,7 @@
         "amdvlk",
         "lib32-amdvlk",
         "grim",
+	"zerotier-one",
         "gsimplecal",
         "wine-staging",
         "winetricks",
